--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 *.txt
 temp
 tmp
+test.html
 
 ### Go ###
 # If you prefer the allow list template instead of the deny list, see community template:
